[package]
name = "cursed_phone"
version = "0.1.0"
authors = ["Robin Pederson <TheBerkin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
incremental = true
codegen-units = 1
# lto = true

[features]
rpi = ["rppal"]
no-log = ["log/release_max_level_off", "log/max_level_off"]

[dependencies]
enum-iterator = "1.2.0"
globset = "0.4.5"
globwalk = "0.8.0"
indexmap = "1.4.0"
log = { version = "0.4.8" }
mlua = { version = "0.4.1", default-features = false, features = ["vendored", "luajit"] }
rand = "0.7.3"
rodio = { version = "0.11.0", default-features = false, features = ["wav", "vorbis"] }
rppal = { version = "0.11.3", optional = true }
serde = { version = "1.0.114", features = ["derive"] }
simplelog = "0.8.0"
take_mut = "0.2.2"
thread-priority = "0.2.0"
toml = "0.5.6"