[package]
name = "cursed_phone"
version = "0.1.0"
authors = ["Robin Pederson <TheBerkin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
incremental = true
codegen-units = 1
# lto = true

[features]
devmode = []
rpi = ["rppal"]
no-log = ["log/release_max_level_off", "log/max_level_off"]

[dependencies]
chrono = "0.4.23"
cron = "0.12.0"
ctrlc = "3.2.5"
enum-iterator = "1.2.0"
glob = "0.3.1"
globset = "0.4.5"
indexmap = "1.9.2"
log = { version = "0.4.8" }
logos = { version = "0.12.1"}
mlua = { version = "0.8.7", default-features = false, features = ["vendored", "luajit52"] }
perlin2d = { version = "0.2.6" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rodio = { version = "0.17.0", default-features = false, features = ["wav", "vorbis"] }
rppal = { version = "0.14.1", optional = true }
serde = { version = "1.0.153", features = ["derive"] }
simplelog = "0.12.0"
spin_sleep = "1.1.1"
take_mut = "0.2.2"
thread-priority = "0.13.1"
toml = "0.7.2"
vfs = "0.9.0"
